# plasma_column

./: .gitignore  AGENTS.md  README.md  command  environment.yml  particle_number_diagnostics.py  particle_number_diagnostics_compare.py  particle_number_diagnostics_v2.py  plasma_column_analysis_plots.ipynb  plasma_column_analysis_plots_v2--1.ipynb  plasma_column_analysis_plots_v2.ipynb  plasma_column_analysis_plots_v2.py  plasma_column_callback_source_picmi_v3.py  plasma_column_mcc_picmi_v7.py  pyproject.toml  requirements-dev.txt  run_plasma_column_method_comparison.ipynb  run_python_callback_source_diagnostics_v2.ipynb  run_seeded_full_transport_diagnostics.ipynb  setup.sh
cases/: baseline_h2.yaml  baseline_kr.yaml  bunched_h2.yaml  bunched_kr.yaml  method_comparison.yaml  vacuum.yaml
docs/: environment.md  method_comparison.md  publication_workflow.md  refactor_plan.md  repo_audit_20260724.md  warpx_customization.md
paper/: figure_manifest.csv  plasma_column_journal_outline.md
plots/: manifest.csv
scripts/: analyze_bunched_beam_neutralization.py  analyze_mcc_verification.py  audit_repo.py  freeze_publication_dataset.py  make_local_neutralization_plots.py  make_paper_figures.py  make_paper_tables.py  make_plots.py  plot_bunched_beam_perveance.py  plot_cross_sections.py  postprocess_case.py  print_environment.py  run_case.py  run_mcc_verification.py  run_scan.py  smoke_test.py  transport_to_inflector.py
tests/: test_analytic_ionization_rate.py  test_basic_physics.py  test_bunched_beam.py  test_case_files.py  test_diagnostics_particle_number.py  test_plotting.py  (+6 more)
(+75 files in other folders)
