[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plasma_column"
version = "0.1.0"
description = "Simulation, physics, diagnostics, and plotting workflow for plasma-assisted space-charge neutralization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "C. Spark"}
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
